--- a/KittySetup/kitty/current-theme.conf
+++ b/KittySetup/kitty/current-theme.conf
@@ -10,7 +10,7 @@
 
 # The basic colors
 foreground              #CDD6F4
-background              #1E1E2E
+background              #1e1e2e
 selection_foreground    #1E1E2E
 selection_background    #F5E0DC
 
@@ -76,5 +76,5 @@ color6  #94E2D5
 color14 #94E2D5
 
 # white
-color7  #BAC2DE
+color7  #cdd6f4
 color15 #A6ADC8
